// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset Basic renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r0:-hint"
    class="css-5wkuiz-boxStyles"
    id="fieldset-:r0:"
  >
    <legend
      class="css-jhnu76-boxStyles-Text"
    >
      What is your name?
    </legend>
    <span
      class="css-w03fpm-boxStyles-Text-FieldsetHint"
      id="fieldset-:r0:-hint"
    >
      We will only use this to respond to your requests
    </span>
    <div
      class="css-1dnalsd-FieldsetContent"
    >
      <div
        class="css-1uilwq9-boxStyles"
      >
        <div
          class="css-o0wi17-boxStyles-FieldContainer"
        >
          <label
            class="css-5wkuiz-boxStyles"
            for="field-:r1:"
          >
            <span
              class="css-jro2y9-boxStyles-Text"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:r1:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-9l8g4f-Field"
          />
        </div>
        <div
          class="css-o0wi17-boxStyles-FieldContainer"
        >
          <label
            class="css-5wkuiz-boxStyles"
            for="field-:r2:"
          >
            <span
              class="css-jro2y9-boxStyles-Text"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:r2:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-9l8g4f-Field"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Fieldset Legend as page heading renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r9:-hint"
    class="css-5wkuiz-boxStyles"
    id="fieldset-:r9:"
  >
    <legend>
      <h1
        class="css-erkn7y-boxStyles"
      >
        What is your name?
      </h1>
    </legend>
    <div
      class="css-uw4i6o-FieldsetHint"
      id="fieldset-:r9:-hint"
    >
      <span
        class="css-qokt5p-boxStyles-Text"
      >
        We will only use this to respond to your requests
      </span>
    </div>
    <div
      class="css-1dnalsd-FieldsetContent"
    >
      <div
        class="css-1uilwq9-boxStyles"
      >
        <div
          class="css-o0wi17-boxStyles-FieldContainer"
        >
          <label
            class="css-5wkuiz-boxStyles"
            for="field-:ra:"
          >
            <span
              class="css-jro2y9-boxStyles-Text"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:ra:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-9l8g4f-Field"
          />
        </div>
        <div
          class="css-o0wi17-boxStyles-FieldContainer"
        >
          <label
            class="css-5wkuiz-boxStyles"
            for="field-:rb:"
          >
            <span
              class="css-jro2y9-boxStyles-Text"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:rb:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-9l8g4f-Field"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
